--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,6 +6,8 @@ log4j.rootLogger=debug,stdout,info,debug,warn,error
 #console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout 
+    #仅输出info级别以上
+log4j.appender.stdout.Threshold=INFO 
 log4j.appender.stdout.layout.ConversionPattern= [%d{yyyy-MM-dd HH:mm:ss a}]:%p %l%m%n
 #info log
 log4j.logger.info=info
